@@ -1,3 +1,10 @@
+2012-10-26  Alan Modra  <amodra@gmail.com>
+
+	PR target/14758
+	* config/tc-ppc.c (ppc_setup_opcodes): Fix comment.
+	(md_assemble): Translate to _DS relocs for ppc32 as well as ppc64.
+	(tc_gen_reloc): Handle _DS relocs in ppc32 mode.
+
 2012-10-22  Simon Baldwin  <simonb@google.com>
 
 	* as.c (dump_statistics): Compute data size as the delta between
